--- a/shop/product.html
+++ b/shop/product.html
@@ -48,6 +48,64 @@
                 </li>
             </ul>
         </nav>
+        <nav class="menu menu_closed">
+            <!--  menu_closed -->
+            <h2 class="menu__heading">MENU</h2>
+            <ul class="menu__list">
+                <li class="menu__main-elem">
+                    <a href="catalog.html" class="menu__link menu__link_type_main">MAN</a>
+                    <ul class="menu__nested-list">
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Accessories</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Bags</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Denim</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">T-Shirts</a></li>
+                    </ul>
+                </li>
+                <li class="menu__main-elem">
+                    <a href="catalog.html" class="menu__link menu__link_type_main">WOMAN</a>
+                    <ul class="menu__nested-list">
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Accessories</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Jackets & Coats</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Polos</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">T-Shirts</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Shirts</a></li>
+                    </ul>
+                </li>
+                <li class="menu__main-elem">
+                    <a href="catalog.html" class="menu__link menu__link_type_main">KIDS</a>
+                    <ul class="menu__nested-list">
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Accessories</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Jackets & Coats</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Polos</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">T-Shirts</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Shirts</a></li>
+                        <li class="menu__child-elem"><a href="catalog.html"
+                                class="menu__link menu__link_type_child">Bags</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <button class="menu__close-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
+                    <path
+                        d="M7.4158 6.00409L11.7158 1.71409C11.9041 1.52579 12.0099 1.27039 12.0099 1.00409C12.0099 0.73779 11.9041 0.482395 11.7158 0.294092C11.5275 0.105788 11.2721 0 11.0058 0C10.7395 0 10.4841 0.105788 10.2958 0.294092L6.0058 4.59409L1.7158 0.294092C1.52749 0.105788 1.2721 -1.9841e-09 1.0058 0C0.739497 1.9841e-09 0.484102 0.105788 0.295798 0.294092C0.107495 0.482395 0.0017066 0.73779 0.0017066 1.00409C0.0017066 1.27039 0.107495 1.52579 0.295798 1.71409L4.5958 6.00409L0.295798 10.2941C0.20207 10.3871 0.127676 10.4977 0.0769072 10.6195C0.0261385 10.7414 0 10.8721 0 11.0041C0 11.1361 0.0261385 11.2668 0.0769072 11.3887C0.127676 11.5105 0.20207 11.6211 0.295798 11.7141C0.388761 11.8078 0.499362 11.8822 0.621222 11.933C0.743081 11.9838 0.873786 12.0099 1.0058 12.0099C1.13781 12.0099 1.26852 11.9838 1.39038 11.933C1.51223 11.8822 1.62284 11.8078 1.7158 11.7141L6.0058 7.41409L10.2958 11.7141C10.3888 11.8078 10.4994 11.8822 10.6212 11.933C10.7431 11.9838 10.8738 12.0099 11.0058 12.0099C11.1378 12.0099 11.2685 11.9838 11.3904 11.933C11.5122 11.8822 11.6228 11.8078 11.7158 11.7141C11.8095 11.6211 11.8839 11.5105 11.9347 11.3887C11.9855 11.2668 12.0116 11.1361 12.0116 11.0041C12.0116 10.8721 11.9855 10.7414 11.9347 10.6195C11.8839 10.4977 11.8095 10.3871 11.7158 10.2941L7.4158 6.00409Z" />
+                </svg>
+            </button>
+
+        </nav>
     </header>
 
     <nav class="crumbs">
@@ -85,27 +143,112 @@
                         outsourcing. Progressively syndicate collaborative architectures before cutting-edge services.
                         Completely visualize parallel core competencies rather than exceptional portals. </p>
                     <p class="product-card__price">$561</p>
-                    <div class="filter filter_page_product">
-                        <ul class="filter__list">
-                            <li class="filter__item"><button type="button"
-                                    class="filter__button filter__button_type_in-item">CHOOSE COLOR<svg width="11"
-                                        height="6" viewBox="0 0 11 6" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
-                                    </svg></button> </li>
-                            <li class="filter__item"><button type="button"
-                                    class="filter__button filter__button_type_in-item">CHOOSE SIZE<svg width="11"
-                                        height="6" viewBox="0 0 11 6" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
-                                    </svg></button></li>
-                            <li class="filter__item"><button type="button"
-                                    class="filter__button filter__button_type_in-item">QUANTITY<svg width="11"
-                                        height="6" viewBox="0 0 11 6" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
-                                    </svg></button></li>
-                        </ul>
+                    <div class="filter">
+                        <details class="filter__item">
+                            <summary class="filter__item-title">CHOOSE COLOR<svg width="11" height="6"
+                                    viewBox="0 0 11 6" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
+                                </svg></summary>
+                            <div class="filter__overlay">
+                                <ul class="filter__overlay-list">
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>Red</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>Green</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>Blue</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>White</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </details>
+                        <details class="filter__item">
+                            <summary class="filter__item-title">CHOOSE SIZE<svg width="11" height="6" viewBox="0 0 11 6"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
+                                </svg></summary>
+                            <div class="filter__overlay">
+                                <ul class="filter__overlay-list">
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>XS</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>S</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>M</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>L</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </details>
+                        <details class="filter__item">
+                            <summary class="filter__item-title">QUANTITY<svg width="11" height="6" viewBox="0 0 11 6"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" />
+                                </svg></summary>
+                            <div class="filter__overlay">
+                                <ul class="filter__overlay-list">
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>1</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>2</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>3</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter__overlay-item">
+                                        <label class="filter__overlay-radio">
+                                            <input type="radio" name="color" value="red">
+                                            <span>4</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </details>
                     </div>
                     <button type="button" class="product-card__button"><svg width="27" height="25" viewBox="0 0 27 25"
                             xmlns="http://www.w3.org/2000/svg">
